fix(theme): main colors to high contrast

--- a/src/styles/material-colors.sass
+++ b/src/styles/material-colors.sass
@@ -1,12 +1,27 @@
 // *** Theme-light ************************
 // Fonts
-$color-font-high: rgba(0,37,74, 0.9)
-$color-font-medium: rgba(0,37,74, 0.8)
-$color-font-disabled: rgba(0,37,74, 0.5)
+$color-font-high: rgba(0, 0, 0, 0.87)
+$color-font-medium: rgba(0, 0, 0, 0.6)
+$color-font-disabled: rgba(0, 0, 0 , 0.38)
+// On Dark
+$color-dark-font-high: rgba(255, 255, 255, 0.87)
+$color-dark-font-medium: rgba(255, 255, 255, 0.6)
+$color-dark-font-disabled: rgba(255, 255, 255, 0.38)
+
+// Universal Fill colors
+$color-fill-primary: #00536b
+$color-fill-primary-light: #417f99
+$color-fill-primary-dark: #002a40
+$color-fill-secodary: #eeff41
+$color-fill-base: #fff
+
+
 // Fills
 $color-fill-medium: rgb(204, 217, 237)
 $color-fill-dark: rgb(149, 172, 207)
 $color-fill-darker: #648ec0
+
+$color-fill-secondary: #eeff41
 // --  
   
 $color-front: rgb(0,23,37)
